# etterna-base

./: Cargo.toml
src/: judge.rs  lib.rs  note_subsets.rs  pattern.rs  rate.rs  rating_calc.rs  savegame.rs  skillsets.rs  structs.rs  timing_info.rs  util.rs
src/rescore/: matching_scorer.rs  mod.rs  naive_scorer.rs
src/structs/: file_size.rs  judge.rs  mod.rs  rate.rs  skillsets.rs  timing_info.rs
src/wife/: mod.rs  wife2.rs  wife3.rs
