[package]
name = "etterna"
version = "0.1.0"
authors = ["kangalioo <jannik.a.schaper@web.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true } # implicit 'serde' feature
thiserror = "1.0"
itertools = "0.9.0"
libm = "0.2.1"
twoway = "0.2.1"
rayon = { version = "1.3.1", optional = true }
btoi = "0.4" # fast int parsing in replays parsing (it's faster than lexical's int parsing)
# fast float parsing in replays analysis. default features disabled because we wanna use the fast
# incorrect algorithms
lexical-core = { version = "0.7", default-features = false, features = ["std"] }
permutation = "0.2"

[features]
default = []
parallel = ["rayon"]
